--- a/index.html
+++ b/index.html
@@ -19,22 +19,21 @@
             <input id="messageState" type="checkbox" style="display:none"/>
             </label>
             <div class="message">
-                <h1 style="font-family: Cinzel, serif; font-size: 40px; letter-spacing: 1.2px;">Dear Salma,</h1>
+                <h1 style="font-family: Cinzel, serif; font-size: 40px; letter-spacing: 1.2px;">Dear lghzala,</h1>
                 <p> 
                     <span>
-                        &emsp; From the moment you entered my life, everything changed in the most beautiful way. You are the light that brightens my darkest days, the warmth that comforts me when the world feels cold, and the love that fills my heart beyond measure.
+                        &emsp; Hey, I just wanted to say something that’s been on my mind… I absolutely love your eyes. they have this way of pulling me in and making the world feel softer. There's something about the way they light up when you smile that stays with me long after. Honestly, there's something special about you, and I can't help but feel drawn to it more and more each day.
                     </span>
                     <br> <br>
                     <span>
-                        &emsp; Every time I look into your eyes, I see my home. Every time I hear your voice, I find peace. And every time you hold my hand, I know there is nowhere else in the world I’d rather be.
+                        &emsp; I’ve been meaning to tell you something... Every time I look into your eyes, I feel like the world slows down a little. There’s a kind of magic in them. the kind that makes me forget what I was saying and just get lost for a second. They say the eyes are the window to the soul, and if that’s true, yours are the most beautiful place I’ve ever seen.
+                    <br> <br>
+                    <span>
+                        &emsp; But it’s not just your eyes, it’s everything. The way you laugh, the way you care, the way you just are. There’s something about you that makes me feel things I didn’t expect, and honestly… I like it. A lot. You’ve been on my mind more than I expected, and I guess what I’m trying to say is: I’m falling for you — a little more every day.
                     </span>
                     <br> <br>
                     <span>
-                        &emsp; I love you not just for who you are but for how you make me feel—cherished, adored, and completely understood. With you, love is not just a word; it’s a feeling, a promise, a forever. 
-                    </span>
-                    <br> <br>
-                    <span>
-                        &emsp;   No matter where life takes us, know that my heart will always belong to you. I will stand beside you through every joy, every challenge, and every dream we chase together. Because with you, love is endless, and forever feels too short.
+                        &emsp;   I just need you to know this,I love your eyes. The way they hold emotions, the way they lit up when you laughed… I’ll never forget that. I’ve felt things with you that I’ve never felt with anyone else. And no matter how far life takes me, a part of me will always carry those eyes, quietly and with care.
                         <span>
 
                 </p>
