--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <input id="messageState" type="checkbox" style="display:none"/>
             </label>
             <div class="message">
-                <h1 style="font-family: Cinzel, serif; font-size: 40px; letter-spacing: 1.2px;">Dear lghzala,</h1>
+                <h1 style="font-family: Cinzel, serif; font-size: 40px; letter-spacing: 1.2px;">Dear Hinan,</h1>
                 <p> 
                     <span>
                         &emsp; Hey, I just wanted to say something that’s been on my mind… I absolutely love your eyes. they have this way of pulling me in and making the world feel softer. There's something about the way they light up when you smile that stays with me long after. Honestly, there's something special about you, and I can't help but feel drawn to it more and more each day.
@@ -33,14 +33,15 @@
                     </span>
                     <br> <br>
                     <span>
-                        &emsp;   I just need you to know this,I love your eyes. The way they hold emotions, the way they lit up when you laughed… I’ll never forget that. I’ve felt things with you that I’ve never felt with anyone else. And no matter how far life takes me, a part of me will always carry those eyes, quietly and with care.
-                        <span>
+                        &emsp;   I just need you to know this,I love your eyes. The way they hold emotions, the way they lit up when you laughed… I’ll never forget that. I’ve felt things with you that I’ve never felt with anyone else. And no matter how far life takes me, a part of me will always carry those eyes, quietly and with care. and I LOVE U IN EVERY UNIVERSE.
+                     <span>
+                         
 
                 </p>
                 <br>
                 <div class="sincere">
                     <p style="font-weight: bold;"> With Love,</p>
-                    <p>abdo</p>
+                    <p>Dajin</p>
                  </div>
             </div>
         </div>
