--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <input id="messageState" type="checkbox" style="display:none"/>
             </label>
             <div class="message">
-                <h1 style="font-family: Cinzel, serif; font-size: 40px; letter-spacing: 1.2px;">Dear Hinan,</h1>
+                <h1 style="font-family: Cinzel, serif; font-size: 40px; letter-spacing: 1.2px;">Dear amounti,</h1>
                 <p> 
                     <span>
                         &emsp; Hey, I just wanted to say something that’s been on my mind… I absolutely love your eyes. they have this way of pulling me in and making the world feel softer. There's something about the way they light up when you smile that stays with me long after. Honestly, there's something special about you, and I can't help but feel drawn to it more and more each day.
@@ -33,7 +33,7 @@
                     </span>
                     <br> <br>
                     <span>
-                        &emsp;   I just need you to know this,I love your eyes. The way they hold emotions, the way they lit up when you laughed… I’ll never forget that. I’ve felt things with you that I’ve never felt with anyone else. And no matter how far life takes me, a part of me will always carry those eyes, quietly and with care. and I LOVE U IN EVERY UNIVERSE.
+                        &emsp;   I just wanna say im sorry for everything and i really want u i just don't know how to tell but, give me another chance and i would never make u cry or broke ur heart (I REALLY WANT YOUU).
                      <span>
                          
 
@@ -51,4 +51,5 @@
         <script defer src="valentine-confession.js"></script>
     </body>
 </html>
+
 
