Fix HTML encoding issues in index.html
Signed-off-by: AYYOUB2002 <sahyaouia@gmail.com>

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <br>
                 <div class="sincere">
                     <p style="font-weight: bold;"> With Love,</p>
-                    <p>Dajin</p>
+                    <p>AYOUB</p>
                  </div>
             </div>
         </div>
@@ -51,5 +51,6 @@
         <script defer src="valentine-confession.js"></script>
     </body>
 </html>
+
 
 
