--- a/index.html
+++ b/index.html
@@ -22,18 +22,7 @@
                 <h1 style="font-family: Cinzel, serif; font-size: 40px; letter-spacing: 1.2px;">Dear amounti,</h1>
                 <p> 
                     <span>
-                        &emsp; Hey, I just wanted to say something that’s been on my mind… I absolutely love your eyes. they have this way of pulling me in and making the world feel softer. There's something about the way they light up when you smile that stays with me long after. Honestly, there's something special about you, and I can't help but feel drawn to it more and more each day.
-                    </span>
-                    <br> <br>
-                    <span>
-                        &emsp; I’ve been meaning to tell you something... Every time I look into your eyes, I feel like the world slows down a little. There’s a kind of magic in them. the kind that makes me forget what I was saying and just get lost for a second. They say the eyes are the window to the soul, and if that’s true, yours are the most beautiful place I’ve ever seen.
-                    <br> <br>
-                    <span>
-                        &emsp; But it’s not just your eyes, it’s everything. The way you laugh, the way you care, the way you just are. There’s something about you that makes me feel things I didn’t expect, and honestly… I like it. A lot. You’ve been on my mind more than I expected, and I guess what I’m trying to say is: I’m falling for you — a little more every day.
-                    </span>
-                    <br> <br>
-                    <span>
-                        &emsp;   I just wanna say im sorry for everything and i really want u i just don't know how to tell but, give me another chance and i would never make u cry or broke ur heart (I REALLY WANT YOUU).
+                        &emsp;   I just wanna say im sorry for everything and i really want u i just don't know how to tell but, give me another chance and i would never make u cry or broke ur heart (I REALLY WANT YOUU) im waitting you abenti.
                      <span>
                          
 
@@ -51,6 +40,7 @@
         <script defer src="valentine-confession.js"></script>
     </body>
 </html>
+
 
 
 
