Update message content and formatting in index.html
Added additional text to the message section and improved the formatting.

Signed-off-by: AYYOUB2002 <sahyaouia@gmail.com>

--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
                     <span>
                         &emsp;   I just wanna say im sorry for everything and i really want u i just don't know how to tell but, give me another chance and i would never make u cry or broke ur heart (I REALLY WANT YOUU) im waitting you abenti.
                      <span>
-                         
-
+                     <br> <br>
+                     <span>
+                        &emsp; kntlb mnk smaha w kntmna nbdaw mn lwl b7al 7ta 7aja maw93at. 
+                     <span>
                 </p>
                 <br>
                 <div class="sincere">
@@ -40,6 +42,7 @@
         <script defer src="valentine-confession.js"></script>
     </body>
 </html>
+
 
 
 
