--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                 <p> 
                     <span>
                         &emsp;   I just wanna say im sorry for everything and i really want u i just don't know how to tell but, give me another chance and i would never make u cry or broke ur heart (I REALLY WANT YOUU) im waitting you abenti.
-                     <span>
+                    <span>
                      <br> <br>
-                     <span>
-                        &emsp; kntlb mnk smaha w kntmna nbdaw mn lwl b7al 7ta 7aja maw93at. 
+                    <span>
+                        &emsp; kntlb mnk smaha w kntmna nbdaw mn lwl b7al 7ta 7aja maw93at w ana mt2akd ghadi nkono hssen w bzeef . 
                      <span>
                 </p>
                 <br>
@@ -42,6 +42,7 @@
         <script defer src="valentine-confession.js"></script>
     </body>
 </html>
+
 
 
 
