--- a/index.html
+++ b/index.html
@@ -19,20 +19,20 @@
             <input id="messageState" type="checkbox" style="display:none"/>
             </label>
             <div class="message">
-                <h1 style="font-family: Cinzel, serif; font-size: 40px; letter-spacing: 1.2px;">Dear amounti,</h1>
+                <h1 style="font-family: Cinzel, serif; font-size: 40px; letter-spacing: 1.2px;">Dear hajar,</h1>
                 <p> 
                     <span>
                         &emsp;   I just wanna say im sorry for everything and i really want u i just don't know how to tell but, give me another chance and i would never make u cry or broke ur heart (I REALLY WANT YOUU) im waitting you abenti.
                     <span>
                      <br> <br>
                     <span>
-                        &emsp; kntlb mnk smaha w kntmna nbdaw mn lwl b7al 7ta 7aja maw93at w ana mt2akd ghadi nkono hssen w bzeef . 
+                        &emsp; kntlb mnk smaha w knbghik bzef a zwina dyali muuah . 
                      <span>
                 </p>
                 <br>
                 <div class="sincere">
                     <p style="font-weight: bold;"> With Love,</p>
-                    <p>AYOUB</p>
+                    <p>oussama</p>
                  </div>
             </div>
         </div>
@@ -42,6 +42,7 @@
         <script defer src="valentine-confession.js"></script>
     </body>
 </html>
+
 
 
 
