--- a/index.html
+++ b/index.html
@@ -22,11 +22,15 @@
                 <h1 style="font-family: Cinzel, serif; font-size: 40px; letter-spacing: 1.2px;">Dear hajar,</h1>
                 <p> 
                     <span>
-                        &emsp;   I just wanna say im sorry for everything and i really want u i just don't know how to tell but, give me another chance and i would never make u cry or broke ur heart (I REALLY WANT YOUU) im waitting you abenti.
+                        &emsp;   بغيت نهضر معاك بصراحة ديال القلب… سمحي ليا إيلا صدرت مني شي هضرة ما كانتش فمحلّها، ولا حسّيتي بيها جرحتك ولو شوية. راه ما كان حتى قصد خايب، بالعكس… يمكن غير نطقّت بسرعة، ويمكن غير كنت معصب، ولكن عمر هضرتي كانت بغرض نوجّعك. أنتِ بالنسبة ليا ماشي غير بنت… أنتِ الإنسانة اللي ملي كتطلّ عليا فالهاتف ولا كنسمع صوتك، كنحس الدنيا ولات خفيفة ومليانة دفء. ما نقدرش نتصور نكون سبب فشي لحظة خايبة عندك.
+
+كنعترف ليك، عندك واحد المكانة فقلبي اللي ما قدر حتى حد يوصل ليها. وداك الخوف اللي كيجي عندي من نخسرك، هو اللي كيخليني نندم بسرعة إيلا غلطت ولا زلّيت. ما بغيتكش غير تسمحي ليا… بغيت تفهمي بلي المشاعر اللي عندي ليك صادقة بزاف. أنا كنبغيك بطريقة يمكن ما عرفتش نعبر عليها كاملين، ولكن كافية أنها تخليني نبقى نفكر فيك حتى فوسط الزحام… تخليني نبتسم بلا سبب… وتخليني نخاف على إحساسك قبل إحساسي.
                     <span>
                      <br> <br>
                     <span>
-                        &emsp; kntlb mnk smaha w knbghik bzef a zwina dyali muuah . 
+                        &emsp; سمحي ليا إيلا ما عرفتوش نوصل ليك داكشي اللي فقلبي بالطريقة الصحيحة، ولكن كنطلب منك غير فرصة باش نبين ليك بلي أنا الرجل اللي يستاهل ثقَتك، وابتسامتك، وحضورك فحياتي. أنتِ فرحة كبيرة، ونعمة كبيرة، وما نرضاش نخسرها.
+
+كنبغيك، وسمحي ليا… وبغيت نبقى داك الشخص اللي كيعوّل عليه قلبك قبل أي حد. 
                      <span>
                 </p>
                 <br>
@@ -42,6 +46,7 @@
         <script defer src="valentine-confession.js"></script>
     </body>
 </html>
+
 
 
 
